--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "eslint-plugin-react-native": "^3.6.0",
     "babel-jest": "24.0.0",
+    "eslint": "^5.12.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-react": "^7.12.4",
     "jest": "24.0.0",
     "metro-react-native-babel-preset": "0.51.1",
     "react-test-renderer": "16.6.3"
