correcoes na interface

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,7 @@
     "no-shadow": "off",
     "react/jsx-one-expression-per-line": "off",
     "react/no-did-update-set-state": "off",
-    "react/jsx-filename-extension": "off"
-  },
-  
+    "react/jsx-filename-extension": "off",
+    "react/forbid-prop-types": "off"
+  }
 }
