--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "prop-types": "^15.6.2",
     "react": "16.6.3",
     "react-native": "0.58.3",
+    "react-native-gesture-handler": "^1.0.15",
+    "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
